added tests for BookItemService